read data from db and file (1, unfinished)

--- a/Java/ANN/Ann/nbproject/project.properties
+++ b/Java/ANN/Ann/nbproject/project.properties
@@ -27,9 +27,15 @@ dist.dir=dist
 dist.jar=${dist.dir}/Ann.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.jsoup-1.8.1-javadoc.jar=E:\\Mediatrac\\Leeching\\jsoup\\jsoup-1.8.1-javadoc.jar
+file.reference.jsoup-1.8.1-sources.jar=E:\\Mediatrac\\Leeching\\jsoup\\jsoup-1.8.1-sources.jar
+file.reference.jsoup-1.8.1.jar=E:\\Mediatrac\\Leeching\\jsoup\\jsoup-1.8.1.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.jsoup-1.8.1-javadoc.jar}:\
+    ${file.reference.jsoup-1.8.1-sources.jar}:\
+    ${file.reference.jsoup-1.8.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
